<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:auto="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hero"
            type="com.liuxv.databinding.mvc.model.HeroModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                auto:contentScrim="?attr/colorPrimary"
                auto:expandedTitleMarginEnd="64dp"
                auto:expandedTitleMarginStart="48dp"
                auto:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    auto:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    auto:layout_collapseMode="pin"
                    auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            auto:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_title_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/intro"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/detail_info_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{hero.detail}"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_title_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/background"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/detail_info_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{hero.detail}"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_title_friend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/friend"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/detail_info_friend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{hero.detail}"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/favorite_selector"
            auto:layout_anchor="@id/appbar"
            auto:layout_anchorGravity="bottom|right|end"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>